tests/fixtures/errors/crossfile_err.full
error[E0200]: Cannot take exclusive lock on 'm': already has shared lock held by 'g'
 --> crossfile_dep.z:8:5
   8 |     m.set key: "b".string value: "y".string
     |     ^
1 error found
